[FIX]修改tab wrap样式

--- a/react/containers/components/c7n/tools/tab-page/style/PageWrap.less
+++ b/react/containers/components/c7n/tools/tab-page/style/PageWrap.less
@@ -14,10 +14,10 @@
   > .c7n-tabs-bar {
     position: absolute;
     top: 64px;
-    width: calc(~"100% - 48px");
+    width: calc(~"100% - 35px");
     z-index: 2;
-    margin-left: 24px;
-    margin-right: 24px;
+    margin-left: 12px;
+    margin-right: 12px;
   }
 }
 
